install_data('theme-switcher-24.png',
  install_dir: join_paths(get_option('datadir'), 'icons/hicolor/24x24/apps')
)

install_data('theme-switcher-32.png',
  install_dir: join_paths(get_option('datadir'), 'icons/hicolor/32x32/apps')
)

install_data('theme-switcher-48.png',
  install_dir: join_paths(get_option('datadir'), 'icons/hicolor/48x48/apps')
)

install_data('theme-switcher-64.png',
  install_dir: join_paths(get_option('datadir'), 'icons/hicolor/64x64/apps')
)

install_data('theme-switcher-96.png',
  install_dir: join_paths(get_option('datadir'), 'icons/hicolor/96x96/apps')
)

install_data('theme-switcher-128.png',
  install_dir: join_paths(get_option('datadir'), 'icons/hicolor/128x128/apps')
)

install_data('theme-switcher-192.png',
  install_dir: join_paths(get_option('datadir'), 'icons/hicolor/192x192/apps')
)

install_data('theme-switcher-256.png',
  install_dir: join_paths(get_option('datadir'), 'icons/hicolor/256x256/apps')
)

install_data('theme-switcher-512.png',
  install_dir: join_paths(get_option('datadir'), 'icons/hicolor/512x512/apps')
)

install_data('theme-switcher-symbolic.svg',
  install_dir: join_paths(get_option('datadir'), '/icons/hicolor/symbolic/apps/')
)