install_data([appname + '-24.png'],
             rename : [appname + '.png'],
  install_dir: join_paths(get_option('datadir'), 'icons/hicolor/24x24/apps')
)

install_data([appname + '-32.png'],
             rename : [appname + '.png'],
  install_dir: join_paths(get_option('datadir'), 'icons/hicolor/32x32/apps')
)

install_data([appname + '-48.png'],
             rename : [appname + '.png'],
  install_dir: join_paths(get_option('datadir'), 'icons/hicolor/48x48/apps')
)

install_data([appname + '-64.png'],
             rename : [appname + '.png'],
  install_dir: join_paths(get_option('datadir'), 'icons/hicolor/64x64/apps')
)

install_data([appname + '-96.png'],
             rename : [appname + '.png'],
  install_dir: join_paths(get_option('datadir'), 'icons/hicolor/96x96/apps')
)

install_data([appname + '-128.png'],
             rename : [appname + '.png'],
  install_dir: join_paths(get_option('datadir'), 'icons/hicolor/128x128/apps')
)

install_data([appname + '-192.png'],
             rename : [appname + '.png'],
  install_dir: join_paths(get_option('datadir'), 'icons/hicolor/192x192/apps')
)

install_data([appname + '-256.png'],
             rename : [appname + '.png'],
  install_dir: join_paths(get_option('datadir'), 'icons/hicolor/256x256/apps')
)

install_data([appname + '-512.png'],
             rename : [appname + '.png'],
  install_dir: join_paths(get_option('datadir'), 'icons/hicolor/512x512/apps')
)

# install_data([appname + '-symbolic.svg'],
#              rename : [appname + '-symbolic.svg'],
#   install_dir: join_paths(get_option('datadir'), 'icons/hicolor/scalable/apps')
# )

install_data([appname + '-symbolic.svg'],
             rename : [appname + '-symbolic.svg'],
  install_dir: join_paths(get_option('datadir'), 'icons/hicolor/symbolic/apps')
)

message('done with icons')
